
- Made our documentation build on FOP 0.93+, 0.20.5 is no longer supported by
  our files (Björn "Vampire" Kautler)

- Made the Windows installer buildable completely via wine on non-Windows
  systems (Björn "Vampire" Kautler)

- Removed the BAT launcher in the Windows installer in favor of the EXE
  launcher (Björn "Vampire" Kautler)

- Fixed the settings for building the Windows launcher (Björn "Vampire" Kautler)

- Made the Deb Ant task compatible to Ant 1.8+ (Björn "Vampire" Kautler)

- Replaced the links to Java 5 documentation with links to Java 6 documentation
  (Björn "Vampire" Kautler)

- Fixed the build.xml which was for the Windows installer only working if
  completely run on Windows, making "ant dist-win" on another system and then
  using "ant dist-win-finish" was broken (Björn "Vampire" Kautler)

- Made the Windows launcher buildable on any system (Björn "Vampire" Kautler)

- README.SRC.txt cleanup (Björn "Vampire" Kautler)

- Made the Windows installer correctly show special characters like german
  umlauts (Björn "Vampire" Kautler)

- Made the filter tasks use UTF-8 encoding as all our files are UTF-8 encoded
  (Björn "Vampire" Kautler)

- build files and properties cleanup (Björn "Vampire" Kautler)

- Fixed various indentation errors (Björn "Vampire" Kautler)

- Added a new menu item "New Macro" in Macros menu
  (patch #2983607 from Damien Radtke, Matthieu Casanova)

- In search and replace when replacing by a BeanShell snippet, it is now
  possible to use multiple statements instead of only one statement. To do
  that, enclose your code in braces
  (patch #3002207 from cy6erGn0m, Matthieu Casanova)

- Added a command line option "-nosplash" to avoid the splash screen
  (Shlomy Reinstein).

- Minor optimization of TextAreaTransferHandler.canImport() method that
  is called when dragging things on the textArea (Matthieu Casanova)
}}}

}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: